<resources>
    <string name="app_name">WeConnect</string>
    <string name="stay_connected_through_weconnect">Stay Connected Through WeConnect</string>
    <string name="logo">Logo</string>
    <string name="login_using_twitter">Login using Twitter</string>
    <string name="register_now">Don\'t have an account? Register</string>
    <string name="googleplus">googleplus</string>
    <string name="email_address">Email Address</string>
    <string name="todo">TODO</string>
    <string name="password">Password</string>
    <string name="twitter">twitter</string>
    <string name="facebook">facebook</string>
    <string name="login_using">Login using</string>
    <string name="or">OR</string>
    <string name="lock">lock</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>

    <string name="welcome_message">Welcome, %s!</string>

    <string name="facebook_app_id">140712655507606</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">62ded2df12415d15398d7cf856946b60</string>

    <string name="hintFirstName">First Name</string>
    <string name="hintLastName">Last Name</string>
    <string name="hintEmail">Email</string>
    <string name="hintBirthday">Birthday</string>


    <string name="textViewFive">Create an account by filling the info below</string>
    <string name="textViewThree">Create Account</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_checking_this_you_agree_to_our_terms_privacy_policy_and_cookies_policy_you_may_receive_sms_notifications_from_us_and_can_opt_out_any_time">By checking this, you agree to our Terms, Privacy Policy and Cookies Policy. You may receive SMS Notifications from us and can opt out any time.</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_chat">Chat</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- Password Reset -->

    <string name="view1">Enter your registered email to receive password reset.</string>
    <string name="hint1">Enter email here</string>
    <string name="reset">Reset Password</string>


</resources>