<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <EditText
        android:id="@+id/firstName"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintFirstName"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="258dp"
        android:layout_height="48dp"
        android:background="@drawable/button_bg"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/chkAgreement"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/chkAgreement"
        app:layout_constraintTop_toBottomOf="@+id/chkAgreement"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="VisualLintBounds" />

    <EditText
        android:id="@+id/emailAdd"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/birthDate"
        app:layout_constraintEnd_toEndOf="@+id/lastName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/lastName"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <EditText
        android:id="@+id/password"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/confirmPassword"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/birthDate"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="13dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintBirthday"
        android:inputType="date"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="@+id/emailAdd"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/emailAdd"
        app:layout_constraintTop_toBottomOf="@+id/emailAdd" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="248dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/birthDate"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/birthDate"
        app:layout_constraintTop_toBottomOf="@+id/birthDate">

        <RadioButton
            android:id="@+id/rdbMale"
            android:layout_width="86dp"
            android:layout_height="50dp"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rdbFemale"
            android:layout_width="102dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/rdbOthers"
            android:layout_width="98dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/others" />
    </RadioGroup>

    <EditText
        android:id="@+id/lastName"
        android:layout_width="308dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintLastName"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/emailAdd"
        app:layout_constraintEnd_toEndOf="@+id/firstName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/firstName"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="35dp"
        android:text="@string/gender"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/birthDate"
        app:layout_constraintTop_toBottomOf="@+id/birthDate"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/chkAgreement"
        android:layout_width="313dp"
        android:layout_height="64dp"
        android:text="@string/by_checking_this_you_agree_to_our_terms_privacy_policy_and_cookies_policy_you_may_receive_sms_notifications_from_us_and_can_opt_out_any_time"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignup"
        app:layout_constraintEnd_toEndOf="@+id/confirmPassword"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="@+id/confirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="306dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/chkAgreement"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <view
        android:id="@+id/view2"
        class="com.google.android.material.imageview.ShapeableImageView"
        android:layout_width="405dp"
        android:layout_height="179dp"
        android:background="@drawable/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/roboto"
        android:text="@string/textViewThree"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto"
        android:text="@string/textViewFive"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>